--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <img src="D:\stylish-portfolio\IMG_20241128_124720507_HDR_PORTRAIT(1).JPG" alt="Your Photo" class="about-img">
+            <img src="https://res.cloudinary.com/ds3boue8q/image/upload/v1743223770/IMG_20241128_124720507_HDR_PORTRAIT_1_jhb2ms.jpg" alt="Your Photo" class="about-img">
             <p style="font-size: 1.2rem; max-width: 800px;">I'm Manihas, a passionate developer and designer crafting unique digital experiences. I thrive on turning ideas into reality with clean code and creative design.</p>
         </div>
     </section>
